[ERMP][task3] fix header overlapping with add movie button

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -2,8 +2,7 @@
 header {
   position: absolute;
   top: 0;
-  left: 0;
-  right: 0;
+  left: 6%;
   background-color: transparent;
   z-index: 3;
   height: 5vh;
